             SEM_CREATE, SEM_LOCK, SEM_RELEASE, SEM_DELETE (SEM_* routines by Mateusz Turcza),
           - fixes/enhancements in: BETA, CONTOUR, CORRELATE, DIALOG_PICKFILE, EXPINT, HDF_OPEN, H5F_OPEN,
	     HDF_SD_START,
             IGAMMA, IMSL_CONSTANT, INTERPOL, LOADCT, NCDF_CONTROL, NCDF_OPEN, ROUTINE_NAMES, TV, TVRD, 
             XYOUTS (!P.MULTI vs. !P.POSITION, ORIENTATION with logscales), INTERPOLATE (the MISSING kw)
	   - fixes in STREGEX, STRPOS, STRSPLIT
           - non-Encapsulated PostScript support along with XSIZE, YSIZE, XOFFSET, YOFFSET, PORTRAIT, LANDSCAPE and
             SCALE_FACTOR settings support for PostScript output (requires pslib - http://pslib.sourceforge.net/
             and makes advantage of PLplot fixes introduced in PLplot 5.9.9)
           - memory leak fix (bug introduced in the previous version)
           - various testsuite & docs updates (incl. docs and examples for CALL_EXTERNAL)
	   - fix in WordExp() when filename argument contain whitespaces (useful in various cases, including 
	     OPENR/W, FILE_MKDIR, ...) [AC 2012/01/04: not finished :( 
	   - !version.os now in lower case for Linux and Darwin

0.9.3:
	   - activities on speed improvements continuing
	   - Initial import of STRMATCH()
	   - Initial import of USERSYM
	   - keyword /NaN for HISTOGRAM
	   - Initial import of LUDC, LUSOL and DETERM, OK now only for DOUBLE
	   - Initial import of CONGRID and BILINEAR
	   - Initial import of TV for PS output
	   - fix in RANDOMN/RANDOMU (Binomial OK, conflicting keywords detected ...)
           - Initial import for QROMB() and QSIMP() (based on QROMB) and QROMO() [not finished]
           - Initial import for TRISOL()
	   - fix in ERASE for background color (preparing Coyote lib. support)
	   - Initial import of STANDARDIZE and HIST_EQUAL
	   - improvment in MAGICK related codes, especially MAGICK_PING (pb with ImageMagick (IM) in Ubuntu 12.04; GraphicsMagick can also be used instead of IM)