@@ -52,6 +52,7 @@ namespace lib {
   // the following by AC
   BaseGDL* qromb_fun(EnvT* e);
   BaseGDL* qromo_fun(EnvT* e);
+  BaseGDL* fz_roots_fun(EnvT* e);
 
   // the following by SA
   BaseGDL* newton_broyden(EnvT* e);
